--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     
     <!-- <script src="./js/01-funciones.js"></script> -->
-    <script src="./js/02-destructuring.js"></script>
+    <!-- <script src="./js/02-destructuring.js"></script> -->
+    <!-- <script src="./js/03-classes.js"></script> -->
+    <script src="./js/04-ejercicio-01.js"></script>
 </body>
 </html>
