--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./js/01-funciones.js"></script> -->
     <!-- <script src="./js/02-destructuring.js"></script> -->
     <!-- <script src="./js/03-classes.js"></script> -->
-    <script src="./js/04-ejercicio-01.js"></script>
+    <!-- <script src="./js/04-ejercicio-01.js"></script> -->
+    <script src="./js/05-ejercicio-02.js"></script>
 </body>
 </html>
