--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./js/02-destructuring.js"></script> -->
     <!-- <script src="./js/03-classes.js"></script> -->
     <!-- <script src="./js/04-ejercicio-01.js"></script> -->
-    <script src="./js/05-ejercicio-02.js"></script>
+    <!-- <script src="./js/05-ejercicio-02.js"></script> -->
+    <script src="./js/06-ejercicio-03.js"></script>
 </body>
 </html>
